#63270 - refactor